slightly better colors??;

--- a/css/main.css
+++ b/css/main.css
@@ -41,15 +41,15 @@ li {
 }
 
 #arrivalsBullet {
-    color: #fdae61;
+    color: #fc8d59;
 }
 
 #departuresBullet {
-    color: #abd9e9
+    color: #91cf60
 }
 
 #equalBullet {
-    color: #D8C19E;
+    color: #C6AE5C;
 }
 
 #noneBullet {
